# qwo-debian

./: .COPYING.swp  AUTHORS  ChangeLog  README  autogen.sh  configure.ac  qwo_control
data/: Makefile.am  qwo.desktop  qworc
debian/: changelog  control  copyright  rules  watch
src/: Makefile.am  qwo.c
